Theme Directory: Styles: Prevent tall screenshots overflowing the container.
Fixes #4499.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@8932 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-themes/css/components/_main.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-themes/css/components/_main.scss
@@ -190,6 +190,7 @@ ul, ol {
 
 .theme-browser .theme .theme-screenshot img {
 	height: auto;
+	max-height: 214px;
 	left: 0;
 	position: inherit;
 	top: 0;
